--- a/estilo.css
+++ b/estilo.css
@@ -89,3 +89,11 @@ body {
   border-radius: 10px;
   margin-bottom: 3%;
 }
+#carol{
+width: 15% 
+}
+#felipe{
+width: 15%  
+}
+#patrick{
+  width: 15% 
