--- a/estilo.css
+++ b/estilo.css
@@ -27,6 +27,14 @@ body {
       border-radius: 10px;
   }
 
+  #videonoticia{
+    width: 45%;
+    height: 40%;
+    border-radius: 10px;
+    margin: 0 auto;
+    display: block;
+  }
+
   #rodape{
     background-color: rgb(240,240,240);
     font-family: sans-serif;
