--- a/estilo.css
+++ b/estilo.css
@@ -114,9 +114,9 @@ box-shadow: 0 10px 10px 0 rgba(0, 0, 0, 0.2), 0 100px 100px 0 rgba(0, 0, 0, 0.19
 }
 
  #sobre{ 
-  width: 320px;
-  padding: 10px;
-  border: 5px solid rgb(53, 41, 161);
+  margin: auto;
+  text-align: justify;
+  border: 5px solid rgba(53, 41, 161, 0.616);
   margin: 0;
 }
 
@@ -135,7 +135,7 @@ img {
 }
 
 h2{
-  text-align: justify;
+  text-align: center;
   border: 1px solid gray;
   margin-left: 15%;
   margin-right: 15%;
