--- a/estilo.css
+++ b/estilo.css
@@ -258,3 +258,14 @@ h2{
     width: 100%;
   }
 }
+
+table {
+  border-collapse: collapse;
+  width: 100%;
+}
+
+th, td {
+  text-align: left;
+  padding: 8px;
+}
+
