--- a/estilo.css
+++ b/estilo.css
@@ -269,3 +269,10 @@ th, td {
   padding: 8px;
 }
 
+#videonoticia{
+  width: 45%;
+  height: 40%;
+  border-radius: 10px;
+  margin: 0 auto;
+  display: block;
+}
